Unless they have freeze resistance.

Added a new block, Clear Ice. It melts/breaks into a puff of snow and is more translucent than normal ice.
It is also non-solid, meaning it doesn't do suffocating damage. Like glass.
(Now the statues are no longer supported, but still present for creative decoration)

Wind Light:
The checkWind now only checks for standard AIR, not CAVE_AIR or VOID_AIR. Since wind isn't supposed to be there most of the time.

Added new triggers:
- Fall Trigger, when a living entity (aka player or mob) falls it triggers a check for a light (not necessarly triggering it). The minimum for firing is 5 blocks
- Burn Trigger, when an entity is on fire
- Freeze Trigger, when an entity is freezing
- Drowning Trigger, when an entity is drowning

(separated the checkLights into another class from LightTriggeringAndEvents)

Fixed a bug with the /reroll duration not working correctly and always giving the lowest amount.
Fixed a similar bug, where using /light reroll cooldown would use a random power instead.

Now the duration is better controllable using the config setting, and the duration of all the lights has been extended using the multiplier.
Now the base values range from 1 to 16, and the default multiplier is 1.3. You can also adjust for low values in the config.

Added /light reroll all command to reroll every aspect of the light

Changed how the light types,targets,duration,cooldown,power ecc are determined so your default light might have changed.
(You will be keeping your current light unless you use /light reset).
Fixed an issue for determing the target type.

Luxmutua berry now changes the target too. (I thought it did already, don't really remember, it's been like a year)

Changed some Luxcognita messages, and some activation messages


Updated the Heal light OTHER target:
- Now instead of targeting "peaceful creatures" it instead targets everyone and removes harmful status effects (except the Light Fatigue!)
